package ServerInfo;
syntax = "proto3";

message QueryServerInfoResponse {
    required string servertime = 1;
    required int32 playersInWar = 2;
    required int32 onlineplayers = 3;
    required string version = 4;
    optional string metricsUrl = 5;
    optional string redShiftUrl = 6;
    optional string engageUrl = 7;
}

message keepaliverequest {
    required int32 value = 1;
}

message keepalive {
    required int32 value = 1;
}

message keepaliveresponse {
    required int32 value = 1;
}
